# hey-bob

./: .gitignore  README.md  pyproject.toml
src/hey_bob/: __init__.py  __main__.py  services.py  test.ipynb
src/hey_bob/data/: lyrics.pickle
