[project]
name = "hey-bob"
version = "0.1.0"
description = "Get extra inspiration by invoking random Bob Dylan lyrics."
readme = "README.md"
authors = [
    { name = "rafasacaan", email = "rafasacaan@gmail.com" }
]
requires-python = ">=3.8"
dependencies = [
    "pandas>=2.0.3",
]

[project.scripts]
hey-bob = "hey_bob:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
